# NarOS

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.sh  install.bat  makefile
backup/: setupb.s
boot/: boot.s  setup.s
device/: ata.c  disk.c  diskio.c  io.s  keyboard.c  tty.c
device/io/: tty.c  tty.h
env/: bochsrc  build.sh
include/: bitmap.h  errno.h  math.h  memory.h  stdarg.h  stdio.h  string.h  syscall.h  type.h  unistd.h
include/device/: ata.h  dev.h  disk.h  io.h  keyboard.h  tty.h
include/nar/: cpu.h  debug.h  dev.h  fs.h  globa.h  heap.h  interrupt.h  irq_vectors.h  mem.h  multiboot.h  panic.h  pipe.h  printk.h  syscall.h  task.h  vfs.h
include/nar/fs/: fs.h  inode.h  vfs.h
include/nar/vfs/: fs.h  inode.h  vfs.h
kernel/: cpu.c  dev.c  fs.c  globa.c  head.S  head.s  heap.c  interrupt.S  interrupt.c  interrupt.s  io.c  main.c  mem.c  panic.c  pipe.c  printk.c  schedule.S  schedule.s  syscall.c  syscall.h  syscall.s  task.c  task.h  type.h
kernel/fs/: fat.c  fat.h  ffconf.h  rootfs.c  rootfs.h  vfs.c
kernel/fs/fat/: diskio.c  fat.c  fat.h  ffconf.h  ffsystem.c  ffunicode.c
kernel/fs/nafs/: fs.c
lib/: bitmap.c  math.c  memory.c  stdio.c  string.c  unistd.c  vsprintf.c
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
